--- a/test/fixtures/boises.yml
+++ b/test/fixtures/boises.yml
@@ -1,11 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  city: MyString
-  temp: 1
-  humidity: 1
+  temp: 1.5
+  humidity: MyString
 
 two:
-  city: MyString
-  temp: 1
-  humidity: 1
+  temp: 1.5
+  humidity: MyString
